# retaildata

./: .gitignore  AGENTS.md  README.md  mkdocs.yml  pyproject.toml
docs/: api.md  dlt_integration.md  getting_started.md  index.md  ml.md  optimization.md
notebooks/: advanced_demo.py  demo_analysis.py
retaildata/: __init__.py  api.py  cli.py  config.py  main.py
retaildata/cache/: manager.py
retaildata/credentials/: encrypted_file_store.py  keyring_store.py  manager.py  store.py
retaildata/datasets/: registry.py
retaildata/integrations/: ml.py
retaildata/postprocess/: metadata.py
retaildata/processing/: __init__.py  manager.py
retaildata/providers/: base.py  dlt.py  hf.py  http.py  kaggle.py  openml.py  retail_express.py  uci.py
retaildata/utils/: hierarchies.py  interventions.py  parallel.py
tests/: test_ml.py  verify_m6.py  verify_m7.py  verify_m8.py
